--- a/3/index.html
+++ b/3/index.html
@@ -2,12 +2,30 @@
 <html>
 <head>
     <script src="https://code.jquery.com/jquery-git.js"></script>
-    <script> //Your Code Here </script>
+    <script> //Your Code Here 
+    $(document).ready(function(){
+        $('buttonClass').click(function(){
+            $('pid').removeClass('center').addClass('large')
+        })
+    })
+    </script>
+
+    <style>
+        p.center {
+            text-align: center;
+            color: red;
+        }
+        p.large {
+            font-size: 200%;
+        }
+    </style>
+    
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>How to get the value of a textbox using jQuery</title>    
+    <title>Change a class name using jQuery.</title>    
 </head>
 <body>
-    <input type="text" value="Input text here">
+    <p id="pid" class="center">jQuery in action</p>
+    <input id="buttonClass" type="button" value="Click to change the class">
 </body>
 </html>
