--- a/1/index.html
+++ b/1/index.html
@@ -9,7 +9,18 @@
         //Check the readme file in this folder for instructions.
 
         //Your Code Goes Here
-
+        function createDiv(){
+            $(document).ready(function(){
+                let newDiv = $('<div>', {
+                    text: 'new div added here',
+                    css: {
+                        color: "white",
+                        background: "red"
+                    }
+                })
+                $("body").append(newDiv)
+            })
+        }
     </script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
