--- a/2/index.html
+++ b/2/index.html
@@ -3,14 +3,20 @@
 
 <head>
     <script src="https://code.jquery.com/jquery-git.js"></script>
-    <script> //Your Code Here </script>
+    <script> //Your Code Here
+    $(document).ready(function(){
+        $('#buttonName').click(function(){
+           $('input[name=firstName]').val('Sam')
+        })
+    })
+    </script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">     
 </head>
 
 <body>
     <p>Please Input your Name:</p>
-    <input type="text" name="name">
+    <input type="text" name="firstName">
     <input id="buttonName" type="button" value="Click to set name" />
 </body>
 
